--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,11 @@
 @include('partials/head.html', {
-  "title": "Name"
+  "title": "Каталог техники"
 })
 <body>
   <div class="site-container">
     @include('partials/header.html')
     <main class="main">
-      
+      @include('partials/content/catalog.html')
     </main>
     @include('partials/footer.html')
   </div>
